--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
               <use href="./images/icons.svg#chocolate"></use>
             </svg>
           </a>
-          <!-- <img src="./images/chocolate.jpg" alt="chocolate logo" width="24" /> -->
-
-          <!-- <div class="header-container-list"> -->
           <ul class="header-list">
             <li class="header-list-item">
               <a class="header-list-item-link" href="./index.html">Home</a>
@@ -49,7 +46,11 @@
             </li>
           </ul>
         </nav>
-        <!-- </div> -->
+        <button type="button" class="header-mobile-menu-btn" data-menu-open>
+          <svg class="header-mobile-menu-btn-icon" width="28" height="28">
+            <use href="./images/icons.svg#icon-menu-03"></use>
+          </svg>
+        </button>
         <ul class="header-icons-list">
           <li class="header-icons-list-item">
             <a
@@ -63,7 +64,7 @@
             </a>
           </li>
           <li class="header-icons-list-item">
-            <a class="header-icons-list-link" href="">
+            <a class="header-icons-list-link" href="" target="_blank">
               <svg class="header-icons" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
@@ -76,7 +77,7 @@
     <!-- ===== MAIN ===== -->
     <main>
       <!-- ===== START PAGE ===== -->
-      <section class="start-page">
+      <!-- <section class="start-page">
         <div class="container start-page-container">
           <h1 class="start-page-title">
             Treat yourself or a loved one to our finest ingredients for a moment
@@ -87,7 +88,6 @@
               <button class="start-page-button" type="button">Buy now</button>
               <a class="start-page-link" href="#">How it’s made</a>
             </div>
-            <!-- <div class="container-link-scroll"> -->
             <a class="start-page-link-scroll" href="#">
               scroll down
               <span class="link-scroll-bg">
@@ -96,13 +96,12 @@
                 </svg>
               </span>
             </a>
-            <!-- </div> -->
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- ===== BENEFITS ===== -->
-      <section class="benefits">
+      <!-- <section class="benefits">
         <div class="container container-benefits">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
@@ -151,10 +150,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- ===== INGREDIENTS ===== -->
-      <section class="ingredients">
+      <!-- <section class="ingredients">
         <div class="container container-ingregients">
           <div class="container-ingregients-title">
             <h2 class="ingredients-title">
@@ -330,10 +329,10 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- ===== How it’s made? ===== -->
-      <section class="made">
+      <!-- <section class="made">
         <div class="container">
           <h2 id="how-its-made" class="made-title">
             How it’s <span class="made-title-orange">made?</span>
@@ -396,10 +395,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- ===== PRODUCTS ===== -->
-      <section class="products visually-hidden">
+      <!-- <section class="products visually-hidden">
         <div class="container">
           <h2 class="products-title">
             Our <span class="products-title-orange">products</span>
@@ -496,10 +495,10 @@
             <button class="products-button" type="button">54 UAH</button>
           </article>
         </div>
-      </section>
+      </section> -->
 
       <!-- ===== TOP SELLER ===== -->
-      <section class="top-seller visually-hidden">
+      <!-- <section class="top-seller visually-hidden">
         <div class="container">
           <h2 class="top-seller-title">
             Top <span class="top-seller-title-black">sellers</span>
@@ -531,61 +530,53 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- ===== REVIEWS ===== -->
-      <section class="reviews">
+      <!-- <section class="reviews">
         <div class="container container-reviews">
           <h2 class="reviews-title" id="chocolate-is-loved">
             Chocolate <span class="reviews-title-black">is loved</span>
           </h2>
-          <!-- <div class="container-reviews-list"> -->
           <ul class="reviews-list">
             <li class="reviews-list-item">
               <img
                 src="./images/victoria-dobrzhanska.png"
                 alt="victoria-dobrzhanska"
               />
-              <!-- <div class="container-reviews-list-item"> -->
               <h3 class="reviews-list-item-title">Victoria Dobrzhanska</h3>
               <p class="reviews-list-item-text">
                 I love this chocolate bar. Perfect combination of light crispy
                 wafer, covered in a thin layer chocolate.
               </p>
-              <!-- </div> -->
             </li>
             <li class="reviews-list-item">
               <img src="./images/nazar-babenko.png" alt="nazar-babenko" />
-              <!-- <div class="container-reviews-list-item"> -->
               <h3 class="reviews-list-item-title">Nazar Babenko</h3>
               <p class="reviews-list-item-text">
                 This chocolate confection is a delight! A delight! The wafer is
                 light and crisp, the hazelnut cream is smooth, and the chocolate
                 is good.
               </p>
-              <!-- </div> -->
             </li>
             <li class="reviews-list-item">
               <img src="./images/olena-kampusch.png" alt="olena-kampusch" />
-              <!-- <div class="container-reviews-list-item"> -->
               <h3 class="reviews-list-item-title">Olena Kampusch</h3>
               <p class="reviews-list-item-text">
                 Chocolate is a family favourite treat. Love the delicious smooth
                 chocolate and the creaminess inside. The wafer is soft but
                 crunchy.
               </p>
-              <!-- </div> -->
             </li>
           </ul>
-          <!-- </div> -->
           <button class="reviews-button" type="button" data-modal-open>
             Leave a review
           </button>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- ===== FOOTER ===== -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="container-footer">
           <div class="container-footer-title">
@@ -615,7 +606,6 @@
           </div>
         </div>
         <div class="container-footer-list">
-          <!-- <div class="container-footer-list-help"> -->
           <ul class="footer-list">
             <li class="footer-list-item">
               <a class="footer-list-item-link" href="./index.html">Home</a>
@@ -631,7 +621,6 @@
               >
             </li>
           </ul>
-          <!-- </div> -->
           <div class="container-footer-form">
             <form>
               <label
@@ -650,8 +639,8 @@
           </div>
         </div>
       </div>
-    </footer>
-    <div class="backdrop" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn-close" data-modal-close>
           <svg class="modal-btn-close-icon" width="28" height="28">
@@ -741,7 +730,52 @@
           <button type="submit" class="modal-btn-send">Send</button>
         </form>
       </div>
+    </div> -->
+    <div class="mobile-menu" data-menu>
+      <button type="button" class="mobile-menu-btn" data-menu-close>
+        <svg class="mobile-menu-btn-icon" width="28" height="28">
+          <use href="./images/icons.svg#icon-x"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu-list">
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-item-link orange" href="./index.html"
+            >Home</a
+          >
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-item-link" href="#how-its-made"
+            >How it’s made?</a
+          >
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-list-item-link" href="#chocolate-is-loved"
+            >Chocolate is loved</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-menu-icons-list">
+        <li class="mobile-menu-icons-list-item">
+          <a
+            class="mobile-menu-icons-list-link"
+            href="https://www.instagram.com/hamerok1/profilecard/?igsh=MTNkNzlhNDZ5NWsyaA=="
+            target="_blank"
+          >
+            <svg class="mobile-menu-icons" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-menu-icons-list-item">
+          <a class="mobile-menu-icons-list-link" href="" target="_blank">
+            <svg class="mobile-menu-icons" width="22" height="22">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
