adaptive start page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- ===== MAIN ===== -->
     <main>
       <!-- ===== START PAGE ===== -->
-      <!-- <section class="start-page">
+      <section class="start-page">
         <div class="container start-page-container">
           <h1 class="start-page-title">
             Treat yourself or a loved one to our finest ingredients for a moment
@@ -98,7 +98,7 @@
             </a>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- ===== BENEFITS ===== -->
       <!-- <section class="benefits">
