--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- ===== MAIN ===== -->
     <main>
       <!-- ===== START PAGE ===== -->
-      <section class="start-page">
+      <section class="section start-page">
         <div class="container start-page-container">
           <h1 class="start-page-title">
             Treat yourself or a loved one to our finest ingredients for a moment
@@ -101,7 +101,7 @@
       </section>
 
       <!-- ===== BENEFITS ===== -->
-      <!-- <section class="benefits">
+      <section class="section benefits">
         <div class="container container-benefits">
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
@@ -150,10 +150,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- ===== INGREDIENTS ===== -->
-      <!-- <section class="ingredients">
+      <section class="section ingredients">
         <div class="container container-ingregients">
           <div class="container-ingregients-title">
             <h2 class="ingredients-title">
@@ -329,10 +329,10 @@
             </ul>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- ===== How it’s made? ===== -->
-      <!-- <section class="made">
+      <!-- <section class="section made">
         <div class="container">
           <h2 id="how-its-made" class="made-title">
             How it’s <span class="made-title-orange">made?</span>
@@ -398,7 +398,7 @@
       </section> -->
 
       <!-- ===== PRODUCTS ===== -->
-      <!-- <section class="products visually-hidden">
+      <!-- <section class="section products visually-hidden">
         <div class="container">
           <h2 class="products-title">
             Our <span class="products-title-orange">products</span>
@@ -498,7 +498,7 @@
       </section> -->
 
       <!-- ===== TOP SELLER ===== -->
-      <!-- <section class="top-seller visually-hidden">
+      <!-- <section class="section top-seller visually-hidden">
         <div class="container">
           <h2 class="top-seller-title">
             Top <span class="top-seller-title-black">sellers</span>
@@ -532,7 +532,7 @@
         </div>
       </section> -->
       <!-- ===== REVIEWS ===== -->
-      <!-- <section class="reviews">
+      <!-- <section class="section reviews">
         <div class="container container-reviews">
           <h2 class="reviews-title" id="chocolate-is-loved">
             Chocolate <span class="reviews-title-black">is loved</span>
