--- a/index.html
+++ b/index.html
@@ -361,11 +361,34 @@
               <li class="ingredients-list-item">
                 <div class="container-ingredients-list-item">
                   <div class="container-ingredients-img">
-                    <img
-                      src="./images/sweet-chocolate.png"
-                      alt="sweet chocolate"
-                      width="206"
-                    />
+                    <picture>
+                      <source
+                        srcset="
+                          ./images/sweet-chocolate.png            1x,
+                          ./images/sweet-chocolate-desktop-2x.png 2x
+                        "
+                        media="(min-width: 1168px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/sweet-chocolate-tablet.png    1x,
+                          ./images/sweet-chocolate-tablet-2x.png 2x
+                        "
+                        media="(min-width: 736px)"
+                      />
+                      <source
+                        srcset="
+                          ./images/sweet-chocolate-mobile.png    1x,
+                          ./images/sweet-chocolate-mobile-2x.png 2x
+                        "
+                        media="(max-width: 735px)"
+                      />
+                      <img
+                        src="./images/sweet-chocolate-mobile.png"
+                        alt="sweet chocolate"
+                        width="206"
+                      />
+                    </picture>
                   </div>
                   <h3 class="ingredients-list-item-title">
                     SEMI - SWEET CHOCOLATE
@@ -411,7 +434,37 @@
             How it’s <span class="made-title-orange">made?</span>
           </h2>
           <div class="container-made">
-            <img src="./images/picture.jpg" alt="picture" width="600" />
+            <picture class="made-picture-container">
+              <source
+                srcset="
+                  ./images/picture.jpg            1x,
+                  ./images/picture-desktop-2x.jpg 2x
+                "
+                media="(min-width = 1168px)"
+              />
+              <source
+                srcset="
+                  ./images/picture-tablet.jpg    1x,
+                  ./images/picture-tablet-2x.jpg 2x
+                "
+                media="(min-width = 736px)"
+              />
+              <source
+                srcset="
+                  ./images/picture-mobile.jpg    1x,
+                  ./images/picture-mobile-2x.jpg 2x
+                "
+                media="(max-width = 735px)"
+              />
+              <img
+                src="./images/picture-mobile.jpg"
+                alt="picture"
+                width="335"
+              />
+            </picture>
+            <!-- <svg class="made-picture-icon" width="35" height="35">
+              <use href="./images/icons.svg#icon-play"></use>
+            </svg> -->
 
             <div class="container-made-list">
               <h3 class="made-title-list">
