--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
     </main>
 
     <!-- ===== FOOTER ===== -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="container-footer">
           <div class="container-footer-title">
@@ -763,7 +763,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn-close" data-modal-close>
