--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <div class="start-page-button-container">
             <div class="button-container">
               <button class="start-page-button" type="button">Buy now</button>
-              <a class="start-page-link" href="#">How it’s made</a>
+              <a class="start-page-link" href="#how-its-made">How it’s made</a>
             </div>
-            <a class="start-page-link-scroll" href="#">
+            <a class="start-page-link-scroll" href="#footer">
               scroll down
               <span class="link-scroll-bg">
                 <svg class="link-scroll-icon" width="22" height="22">
@@ -700,7 +700,7 @@
     </main>
 
     <!-- ===== FOOTER ===== -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="container-footer">
           <div class="container-footer-title">
@@ -746,7 +746,7 @@
             </li>
           </ul>
           <div class="container-footer-form">
-            <form>
+            <form class="footer-form">
               <label
                 for="user-email"
                 class="footer-form-label visually-hidden"
@@ -764,7 +764,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn-close" data-modal-close>
           <svg class="modal-btn-close-icon" width="28" height="28">
@@ -843,18 +843,21 @@
               <span class="castom-checkbox">
                 <svg class="castom-checkbox-icon" width="10" height="10">
                   <use href="./images/icons.svg#icon-icon"></use>
-                </svg> </span
-              >I accept the terms and conditions of the<a
-                href=""
-                class="checkbox-link orange"
-                >Privacy Policy</a
+                </svg>
+              </span>
+              <span class="span-text"
+                >I accept the terms and conditions of the<a
+                  href=""
+                  class="checkbox-link orange"
+                  >Privacy Policy</a
+                ></span
               >
             </label>
           </div>
           <button type="submit" class="modal-btn-send">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <div class="mobile-menu" data-menu>
       <button type="button" class="mobile-menu-btn" data-menu-close>
         <svg class="mobile-menu-btn-icon" width="28" height="28">
